# iplanrio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
iplanrio/: __init__.py
iplanrio/pipelines_templates/dump_arcgis/: flows.py  tasks.py
iplanrio/pipelines_templates/dump_db/: flow.py  tasks.py  utils.py
iplanrio/pipelines_templates/dump_url/: flows.py  tasks.py  utils.py
iplanrio/pipelines_utils/: bd.py  database_sql.py  dbt.py  env.py  gcs.py  infisical.py  io.py  logging.py  pandas.py  prefect.py  tasks.py
