[project]
name = "iplanrio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedosdados[upload]==2.0.0b23",
    "croniter>=6.0.0",
    "cx-oracle>=8.3.0",
    "dbt-bigquery==1.10.1",
    "gitpython==3.1.44",
    "prefect==3.4.9",
    "prefect-dbt==0.7.5",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "pyodbc>=5.2.0",
]
